--- a/Gobot/Gobot/Content/Account.scss
+++ b/Gobot/Gobot/Content/Account.scss
@@ -162,6 +162,8 @@ h5 { font: 400 14px Lato, sans-serif; color: white;}
     }
 
 #options {
+    height: 500px;
+
     > div { 
         width: 33.3%; 
         padding: 50px 0 !important;
